--- a/exercice1.html
+++ b/exercice1.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Voiture fonctionnant à l'energie solaire</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div id="container"></div>
 
     <script type="text/javascript" src="exercice1.js"></script>
 </body>
